[package]
name = "codecs"
version = "0.1.0"
authors = ["carlosb1 <carlos.baezruiz@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  {version="1.0", features=["derive"]}
serde_derive = "1.0"
serde_json= "1.0"
bytes = "0.6"
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5.1", features = ["codec"] }
